tdf#126940: export ansicpg in RTF when copying database

This allows correctly detect encoding of 8-bit characters on paste

Change-Id: I586fd2ec140848e9097927818c492ab2fc7cf8ea